data/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>CEN Value Selling</fullName>
        <description>default Sales Process using the eValue Prompter process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Quoted</fullName>
        </values>
        <values>
            <fullName>Targeted Account</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Active_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract associated with the Opportunity.</description>
        <inlineHelpText>Contract associated with the Opportunity.</inlineHelpText>
        <label>Active Contract</label>
        <referenceTo>Contract_CEN__c</referenceTo>
        <relationshipLabel>Opportunities (Active Contract)</relationshipLabel>
        <relationshipName>Opportunities_Active_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <inlineHelpText>Date the Opportunity formally closes.</inlineHelpText>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Square_Footage_Planned__c</fullName>
        <label>Additional Square Footage Planned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_sq_ft_planned_next_2_years__c</fullName>
        <label>Additional sq. ft. planned next 2 years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocate_Plant_Costs__c</fullName>
        <label>Allocate Plant Costs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Utility_Costs__c</fullName>
        <formula>Electricity__c +  Heating_Oil__c +  Natural_Gas__c +  Solar__c +  Water_Sewer__c +  Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Utility Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Weekly_Attendance__c</fullName>
        <label>Average Weekly Attendance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable_Term__c</fullName>
        <description>Previously Billable Term</description>
        <label>Billable Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Board_Vote_Date__c</fullName>
        <label>Board Vote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Board_Vote__c</fullName>
        <label>Board Vote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgeted_Annual_Utility_Costs_Proposal__c</fullName>
        <formula>Budgeted_Electricity__c +  Budgeted_Solar__c +  Budgeted_Natural_Gas__c +  Budgeted_Water_Sewer__c +  Budgeted_Heating_Oil__c +  Budgeted_Other_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budgeted Annual Utility Costs Proposal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Electricity__c</fullName>
        <label>Budgeted Electricity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Exp_Reporting_Period_Mos__c</fullName>
        <label>Budgeted Exp Reporting Period Mos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_Exp_Reporting_Period__c</fullName>
        <label>Budgeted Exp Reporting Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_Heating_Oil__c</fullName>
        <label>Budgeted Heating Oil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Natural_Gas__c</fullName>
        <label>Budgeted Natural Gas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Other_Expense__c</fullName>
        <label>Budgeted Other Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Solar__c</fullName>
        <label>Budgeted Solar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Water_Sewer__c</fullName>
        <label>Budgeted Water Sewer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buildings_Served_by_Central_Plant__c</fullName>
        <label># of Buildings Served by Central Plant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundled__c</fullName>
        <label>Bundled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Heating_Cooling_Plant__c</fullName>
        <label>Central/Heating Cooling Plant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Church_Membership_Enrollment__c</fullName>
        <label>Church Membership Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Church_Operated_School__c</fullName>
        <label>Church Operated School?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinics_Square_Footage__c</fullName>
        <label>Clinics Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competition_Comments__c</fullName>
        <label>Competition Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Credits__c</fullName>
        <label>Contract Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Services_Company__c</fullName>
        <label>Contract Services Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>Date the Contract takes effect.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract associated with the Opportunity.</description>
        <inlineHelpText>Contract associated with the Opportunity.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract_CEN__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_per_Square_Foot__c</fullName>
        <formula>Annual_Utility_Costs__c /  Square_Footage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per Square Foot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_Student__c</fullName>
        <formula>Annual_Utility_Costs__c /  Membership_Enrollment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D365AccountGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365AccountGuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D365OpportunityGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365OpportunityGuid</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DRF_Email_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRF Email Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (DRF Email Recipient)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRF_Primary_Contact__c</fullName>
        <label>DRF Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRF_Received_Date__c</fullName>
        <label>DRF Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRF_Submitter_Email__c</fullName>
        <label>DRF Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DRF_Submitter_Name__c</fullName>
        <label>DRF Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRF_Submitter_Phone__c</fullName>
        <label>DRF Submitter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DRF_Submitter_Title__c</fullName>
        <label>DRF Submitter Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF (  IsClosed = True, 
 CloseDate - DATEVALUE ( CreatedDate ) ,
 TODAY() - DATEVALUE ( CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines the numbers of days an opportunity is open and accounts for it being closed.</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECAP_Fee_Payments__c</fullName>
        <label># eCAP Fee Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECAP_Fee__c</fullName>
        <label>eCAP Software Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ECAP_Renewal_Fee__c</fullName>
        <label>eCAP Maintenance Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_Employed_By__c</fullName>
        <label>ES Employed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Cenergistic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ES_Estimated_Salary_Annual__c</fullName>
        <label>ES Estimated Salary Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_Estimated_Salary_Monthly__c</fullName>
        <formula>ES_Estimated_Salary_Annual__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Estimated Salary Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_FT__c</fullName>
        <label># ES FT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_PT__c</fullName>
        <label># ES PT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Company_Interval_Usage_Data__c</fullName>
        <label>Electric Company Interval Usage Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electricity_Vendor__c</fullName>
        <label>Electricity Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity__c</fullName>
        <label>Electricity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_Accounting_Software__c</fullName>
        <label>Energy Accounting Software</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Annual_Fee__c</fullName>
        <formula>Estimated_Net_Monthly_Fee__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Net Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Monthly_Fee__c</fullName>
        <label>Estimated Net Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Annual_Allocation__c</fullName>
        <label>Executive Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Pastor__c</fullName>
        <label>Executive Pastor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Utilized__c</fullName>
        <label>Executive Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Fixed-ES</fullName>
                </value>
                <value>
                    <fullName>Var Fixed</fullName>
                </value>
                <value>
                    <fullName>Var Fixed-ES</fullName>
                </value>
                <value>
                    <fullName>Split Fee</fullName>
                </value>
                <value>
                    <fullName>Performance Fee</fullName>
                </value>
                <value>
                    <fullName>Turnkey</fullName>
                </value>
                <value>
                    <fullName>Turnkey-R</fullName>
                </value>
                <value>
                    <fullName>Turnkey-S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Annual_Fee__c</fullName>
        <label>Fixed Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funnel__c</fullName>
        <label>Funnel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PPD</fullName>
                </value>
                <value>
                    <fullName>PD</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generate_Own_Power__c</fullName>
        <label>Generate Own Power?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GreenX_Annual_Allocation__c</fullName>
        <label>GreenX Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GreenX_Utilized__c</fullName>
        <label>GreenX Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY1__c</fullName>
        <label>Gross Monthly Fee PY1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY2__c</fullName>
        <label>Gross Monthly Fee PY2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY3__c</fullName>
        <label>Gross Monthly Fee PY3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Heating_Oil__c</fullName>
        <label>Heating Oil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hospital_Beds__c</fullName>
        <label>Hospital Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Square_Footage__c</fullName>
        <label>Hospital Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <label>Hours of Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_All_Expenditures__c</fullName>
        <label>Included All Expenditures?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interval_Data__c</fullName>
        <label>Interval Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jointly_Owned_Operated_Buildings__c</fullName>
        <label>Jointly Owned/Operated Buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner__c</fullName>
        <description>D365 Owner</description>
        <label>Legacy Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason_Note__c</fullName>
        <inlineHelpText>Provide a brief description outlining the reason the opportunity did not move forward.</inlineHelpText>
        <label>Loss Reason Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Contract Terms</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_2_Assigned_Date__c</fullName>
        <label>MC #2 Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MC_Assigned_Date__c</fullName>
        <label>MC Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Consultant_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Consultant #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Market Consultant #2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Market Consultant)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matrix_Approved_Date__c</fullName>
        <label>Matrix Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matrix_Cost_Per_Visit__c</fullName>
        <label>Matrix Cost Per Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matrix_Notes__c</fullName>
        <label>Matrix Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Matrix_Utility_Spend__c</fullName>
        <label>Matrix Utility Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Measure_Annual_Allocation__c</fullName>
        <label>Measure Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Measure_Utilized__c</fullName>
        <label>Measure Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Office_Buildings_Square_Footage__c</fullName>
        <label>Medical Office Buildings Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Enrollment__c</fullName>
        <label>Membership Enrollment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Natural_Gas__c</fullName>
        <label>Natural Gas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Contract_Value__c</fullName>
        <label>Net Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Fee_PY1__c</fullName>
        <label>Net Monthly Fee PY1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Fee_PY2__c</fullName>
        <label>Net Monthly Fee PY2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Fee_PY3__c</fullName>
        <label>Net Monthly Fee PY3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contracts_Gross_Annual_Fee__c</fullName>
        <label>New Contracts Gross Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contracts_Gross_Monthly_Fee__c</fullName>
        <label>New Contracts Gross Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_ECAP_Renewal_Payments__c</fullName>
        <label>Number ECAP Renewal Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Buildings_Battery__c</fullName>
        <label>Number of Buildings (Battery)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Buildings_Co_generation__c</fullName>
        <label>Number of Buildings (Co-generation)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Buildings_Wind__c</fullName>
        <label>Number of Buildings (Wind)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Buildings__c</fullName>
        <label>Number of Buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Hospitals__c</fullName>
        <label>Number of Hospitals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Outpatient_Clinics__c</fullName>
        <label>Number of Outpatient Clinics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Professional_Office_Buildings__c</fullName>
        <label>Number of Professional Office Buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Schools_Campuses__c</fullName>
        <label>Number of Schools/Campuses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Water_Treatment_Plants__c</fullName>
        <label>Number of Water Treatment Plants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Electrical_Generation_Type__c</fullName>
        <label>Onsite Electrical Generation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Generators</fullName>
                </value>
                <value>
                    <fullName>Cogeneration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onsite_Electrical_Generation__c</fullName>
        <label>Onsite Electrical Generation (KW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by admin team to  override automatic name creation.</inlineHelpText>
        <label>Opportunity Name Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpsPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ops Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_OpsPerson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <formula>TEXT(Account.Org_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Square_Footage__c</fullName>
        <label>Other Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Utility_Type__c</fullName>
        <label>Other Utility Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Out_patient_Center_Square_Footage__c</fullName>
        <label>Out-patient Center Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>